--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Tab Challenge</title>
-		<link rel="stylesheet" href="style.css">
-		<script src="tabs.js"></script>
-	</head>
-	<body>
-		<p>Some tabs here 🗂</p>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Tab Challenge</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="tabs.js"></script>
+  </head>
+  <body>
+    <!-- Container that holds the tabs and their corresponding content. -->
+    <div class="tab-container"></div>
+  </body>
 </html>
