update: Add tab content sections for Terminals 1–3 with role="tabpanel"

--- a/index.html
+++ b/index.html
@@ -19,6 +19,49 @@
         <button class="tab" role="tab" aria-selected="false" aria-controls="tab2">Terminal 2</button>
         <button class="tab" role="tab" aria-selected="false" aria-controls="tab3">Terminal 3</button>
       </div>
+      <!-- The tab content sections. 
+           Each content block corresponds to a tab and is revealed when that tab is active. -->
+      <div class="tab-content active" id="tab1" role="tabpanel">
+        <!-- Heading and description for Terminal 1 -->
+        <h3>Directions</h3>
+        <p>
+          Set your maps to Manchester Airport and exit the M56 at Junction 5 and get in lane for Terminal 1 (T1). At the
+          set of traffic lights, go straight ahead for T1.
+        </p>
+        <p>
+          At the roundabout, take the 5th exit and follow signs for T1 Meet & Greet (T1 M&G). After 0.1 mile take the
+          first available left turn and continue 0.1 mile to a roundabout. Take the first exit and the entrance to T1
+          M&G is then immediately on your right.
+        </p>
+      </div>
+      <div class="tab-content" id="tab2" role="tabpanel">
+        <!-- Heading and placeholder text for Terminal 2 -->
+        <h3>Title</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
+          tempus nunc. In in mi at nibh scelerisque vestibulum. Aenean at tortor leo. Duis sodales porta arcu. Sed at
+          magna vulputate, venenatis nunc ac, ullamcorper dolor.
+        </p>
+        <p>
+          In hac habitasse platea dictumst. Vivamus et erat diam. Pellentesque dui augue, molestie at rhoncus vel,
+          iaculis vitae eros. Sed posuere ipsum a elementum ultrices. Etiam et ipsum dignissim, tincidunt nulla quis,
+          vestibulum felis.
+        </p>
+      </div>
+      <div class="tab-content" id="tab3" role="tabpanel">
+        <!-- Heading and placeholder text for Terminal 3 -->
+        <h3>Title</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
+          tempus nunc. In in mi at nibh scelerisque vestibulum. Aenean at tortor leo. Duis sodales porta arcu. Sed at
+          magna vulputate, venenatis nunc ac, ullamcorper dolor.
+        </p>
+        <p>
+          In hac habitasse platea dictumst. Vivamus et erat diam. Pellentesque dui augue, molestie at rhoncus vel,
+          iaculis vitae eros. Sed posuere ipsum a elementum ultrices. Etiam et ipsum dignissim, tincidunt nulla quis,
+          vestibulum felis.
+        </p>
+      </div>
     </div>
   </body>
 </html>
