update: content text

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </div>
       <div class="tab-content" id="tab2" role="tabpanel">
         <!-- Heading and placeholder text for Terminal 2 -->
-        <h3>Title</h3>
+        <h3>Terminal 2 Title</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
+          T2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
           tempus nunc. In in mi at nibh scelerisque vestibulum. Aenean at tortor leo. Duis sodales porta arcu. Sed at
           magna vulputate, venenatis nunc ac, ullamcorper dolor.
         </p>
@@ -50,9 +50,9 @@
       </div>
       <div class="tab-content" id="tab3" role="tabpanel">
         <!-- Heading and placeholder text for Terminal 3 -->
-        <h3>Title</h3>
+        <h3>Terminal 3 Title</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
+          T3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra magna in gravida iaculis. Vivamus ut
           tempus nunc. In in mi at nibh scelerisque vestibulum. Aenean at tortor leo. Duis sodales porta arcu. Sed at
           magna vulputate, venenatis nunc ac, ullamcorper dolor.
         </p>
